2003-02-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/fpu/s_nextafterl.c: Decrement high word of mantissa
	of demorm correctly if low word is zero.
	Reported by Fred J. Tydeman <tydeman@tybor.com>.

	* sysdeps/generic/libc-start.c [HAVE_PTR_NTHREADS]: Decrement thread
	counter and only call __exit_thread if this is not the last thread.

2003-02-13  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/alpha/dl-machine.h (elf_machine_rela): Add instead of
	subtracting map->l_tls_offset.

2003-02-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/bits/confname.h: Define _CS_GNU_LIBC_VERSION and
	_CS_GNU_LIBPTHREAD_VERSION.
	* posix/conststr.c: Handle these new values.
	* posix/getconf.c: Likewise.

	* sysdeps/mips/dl-machine.h (ELF_MACHINE_RUNTIME_TRAMPOLINE): Fix
	masking of version index.
	Patch by Lance Larsh <Lance.Larsh@oracle.com>.

2003-02-11  Ulrich Drepper  <drepper@redhat.com>

	* nss/nss_files/files-hosts.c (HOST_DB_LOOKUP): Compute alignment
	correctly.  Reported by Thorsten Kukuk.

2003-02-10  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (check-textrel-CFLAGS): Pass _XOPEN_SOURCE and
	_BSD_SOURCE to compiler.
	* elf/check-textrel.c (SWAP): Add parenthesis to avoid warnings.
	Patches by Alan Modra.

2003-02-08  Ulrich Drepper  <drepper@redhat.com>

	* io/ftwtest.c: Get current working directory before and after the
	nftw call and make sure they match.

2003-02-08  Jim Meyering  <jim@meyering.net>

	* io/ftw.c (ftw_startup): When using FTW_CHDIR, always remember
	the current directory, not just when DIR contains a slash.
	Reported by Manoj Srivastava.

2003-02-07  Jim Meyering  <jim@meyering.net>

	* io/ftw.c: Add autoconf-recommended block of alloca-related code.
	Include autoconf-recommended block of dirent/NAMELEN-related
	definitions and includes.  Use NAMELEN throughout, rather than
	_D_EXACT_NAMLEN.
	[_LIBC]: Define NAMELEN to _D_EXACT_NAMLEN.
	[!_LIBC] (__getcwd): Define to xgetcwd and declare xgetcwd.